--- a/asura-home/src/main/resources/application.yml
+++ b/asura-home/src/main/resources/application.yml
@@ -4,13 +4,17 @@ server:
     context-path: /wyp/
 
 spring:
+    thymeleaf:
+      prefix: classpath:/templates/
+      suffix: .html
+      mode: HTML5
+      encoding: UTF-8
+      content-type: text/html
+      cache: false
     http:
         encoding.charset: UTF-8
         encoding.enable: true
         encoding.force: true
-    mvc:
-        view.prefix: /jsp/
-        view.suffix: .jsp
     datasource:
         url: jdbc:mysql://localhost:3306/spring_boot_hello?characterEncoding=utf-8
         username: root
