--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
     <modules>
         <module>asura-client</module>
         <module>asura-home</module>
+        <module>asura-consumer</module>
+        <module>asura-core</module>
     </modules>
 
     <!-- Inherit defaults from Spring Boot -->
@@ -22,6 +24,21 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.dianping.asura</groupId>
+                <artifactId>asura-consumer</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.dianping.asura</groupId>
+                <artifactId>asura-client</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.dianping.asura</groupId>
+                <artifactId>asura-core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
@@ -31,45 +48,6 @@
 
         </dependencies>
     </dependencyManagement>
-
-    <!-- Package as an executable JAR -->
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
-
-    <!-- Allow access to Spring milestones and snapshots -->
-    <!-- (you don't need this if you are using anything after 0.5.0.RELEASE) -->
-    <repositories>
-        <repository>
-            <id>spring-snapshots</id>
-            <url>http://repo.spring.io/snapshot</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>spring-milestones</id>
-            <url>http://repo.spring.io/milestone</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>spring-snapshots</id>
-            <url>http://repo.spring.io/snapshot</url>
-        </pluginRepository>
-        <pluginRepository>
-            <id>spring-milestones</id>
-            <url>http://repo.spring.io/milestone</url>
-        </pluginRepository>
-    </pluginRepositories>
 
     <properties>
         <start-class>com.wyp.Application</start-class>
